logs/dag_id=project_6_2/run_id=manual__2024-01-31T13:25:34.309287+00:00/task_id=create_agg_table/attempt=3.log
[2024-01-31 13:28:42,109] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: project_6_2.create_agg_table manual__2024-01-31T13:25:34.309287+00:00 [queued]>
[2024-01-31 13:28:42,134] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: project_6_2.create_agg_table manual__2024-01-31T13:25:34.309287+00:00 [queued]>
[2024-01-31 13:28:42,135] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2024-01-31 13:28:42,135] {taskinstance.py:1357} INFO - Starting attempt 3 of 4
[2024-01-31 13:28:42,135] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2024-01-31 13:28:42,181] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_agg_table> on 2024-01-31 13:25:34.309287+00:00
[2024-01-31 13:28:42,194] {standard_task_runner.py:52} INFO - Started process 3499 to run task
[2024-01-31 13:28:42,202] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'project_6_2', 'create_agg_table', 'manual__2024-01-31T13:25:34.309287+00:00', '--job-id', '60', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmphs49y2zt', '--error-file', '/tmp/tmpuv9nh1if']
[2024-01-31 13:28:42,203] {standard_task_runner.py:80} INFO - Job 60: Subtask create_agg_table
[2024-01-31 13:28:42,580] {task_command.py:369} INFO - Running <TaskInstance: project_6_2.create_agg_table manual__2024-01-31T13:25:34.309287+00:00 [running]> on host 8ebb6ccf62d7
[2024-01-31 13:28:43,057] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=project_6_2
AIRFLOW_CTX_TASK_ID=create_agg_table
AIRFLOW_CTX_EXECUTION_DATE=2024-01-31T13:25:34.309287+00:00
AIRFLOW_CTX_TRY_NUMBER=3
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-01-31T13:25:34.309287+00:00
[2024-01-31 13:28:43,175] {base.py:68} INFO - Using connection ID 'postgres_dwh' for task execution.
[2024-01-31 13:28:43,405] {dbapi.py:208} INFO - Running statement: 
                create table if not exist test_1 (
                dt date,
                dag_id character varying,
                primary key (dt, dag_id)
                )
        , parameters: None
[2024-01-31 13:28:43,488] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "exist"
LINE 2:                 create table if not exist test_1 (
                                            ^

[2024-01-31 13:28:43,748] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=project_6_2, task_id=create_agg_table, execution_date=20240131T132534, start_date=20240131T132842, end_date=20240131T132843
[2024-01-31 13:28:43,938] {standard_task_runner.py:97} ERROR - Failed to execute job 60 for task create_agg_table (syntax error at or near "exist"
LINE 2:                 create table if not exist test_1 (
                                            ^
; 3499)
[2024-01-31 13:28:44,017] {local_task_job.py:156} INFO - Task exited with return code 1
[2024-01-31 13:28:44,572] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
